test/should_pass/basic_051.grg
actions basic_051 using basic_model_001;

rule r {
	pattern {
		x : A;
		y : B;
		z : C;
	}
	replace {
		a : A;
	}
}

