test/should_fail/inh_002.grg
actions inh_002 using inh_model_002;

rule bla { pattern{} replace{} }
